--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="imageview_desc">Bitcoin Logo</string>
 
     <string-array name="currency_array">
+        <item>BTCUSD</item>
         <item>AUD</item>
         <item>BRL</item>
         <item>CAD</item>
